Added last methods and script file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 project(concordo)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -12,5 +13,6 @@ add_executable(program
                src/Canal.cpp
                src/CanalTexto.cpp
                src/CanalVoz.cpp
-               src/Servidor.cpp)
+               src/Servidor.cpp
+               src/Sistema.cpp)
 
